# pwned

./: .editorconfig  CHANGELOG.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py  tox.ini
pwned/: __init__.py  __main__.py  cli.py
script/: build  clean  install  pwned
tests/: test_pwned.py
