[tool.poetry]
name = "pwned"
version = "0.1.0"
description = "A command line interface for haveibeenpwned.com"
authors = ["Severen Redwood <severen@shrike.me>"]
license = "GPL-3.0"
homepage = "https://github.com/severen/pwned"

readme = "README.md"
keywords = ["haveibeenpwned", "security", "password"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Operating System :: POSIX :: BSD",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^4.1"

[tool.poetry.scripts]
pwned = "pwned.__main__:pwned"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
